assets/style.css
body {
    font-family: "Segoe UI", Arial, Helvetica, sans-serif;
    background: #b6d4dd;
    margin: 0;
}

header {
    padding: 50px;
    margin: 0;
    text-align: center;
    background-color: #4b94aa;
    color: #FFFFFF;
    margin-bottom: 40px;
}

header h1 {
    font-weight: 400;
    line-height: 0.5rem;
}

header h2 {
    font-weight: 100;
}

.time-blocks {
    width: 80%;
    margin: 0 auto;
    margin-bottom: 2px;
}

#time-box::after {
    content: " ";
    clear: both;
    display: table;
}

.time-blocks::after {
    content: " ";
    clear: both;
    display: table;
}

.time {
    float: left;
    width: 20%;
    background-color: #ebebeb;
    border-radius: 20px 0px 0px 20px;
    text-align: center;
    padding: 30px 0px;
}

.event {
    float: left;
    width: 60%;
    padding: 30px 20px;
    background-color: #bdbdbd;
    color: #00000069;
    font-style: italic;
}

.active {
    font-style: normal;
    color: #000000;
}

.past {
    background-color: #bdbdbd;
}

.present {
    background-color: #ffc29f;
}

.time-present {
    background-color: #FFFFFF;
}

.future {
    background-color: #d69a87;
}

.button {
    float: left;
    width: 80px;
    font-size: 30px;
    padding: 23px 0px;
    border: none;
    border-radius: 0px 20px 20px 0px;
    background-color: #0784aa;
}

.fa-save {
    color: white;
}

@media screen and (max-width: 576px) {

    header {
        padding: 10px;
        margin: 0;
        text-align: center;
        background-color: #4b94aa;
        color: #FFFFFF;
        margin-bottom: 40px;
    }
    
    header h1 {
        font-weight: 400;
        line-height: 2rem;
    }

    .time-blocks {
        width: 100%;
        margin: 0 auto;
        margin-bottom: 2px;
    }
    
    .button {
        float: left;
        width: 80px;
        font-size: 30px;
        padding: 23px 0px;
        border: none;
        border-radius: 0px 20px 20px 0px;
        background-color: #0784aa;
    }

    .event {
        float: left;
        width: 45%;
        padding: 30px 20px;
        background-color: #bdbdbd;
        color: #00000069;
        font-style: italic;
    }
    
    .active {
        font-style: normal;
        color: #000000;
    }
    
    .past {
        background-color: #bdbdbd;
    }
    
    .present {
        background-color: #ffc29f;
    }
    
    .time-present {
        background-color: #FFFFFF;
    }
    
    .future {
        background-color: #d69a87;
    }
}

